--- a/vercel.json
+++ b/vercel.json
@@ -1,10 +1,9 @@
 {
-    "version": 2,
+    "version": 1,
     "builds": [
         {
             "src": "app.py",
-            "use": "@vercel/python",
-            "config": { "maxLambdaSize": "15mb", "runtime": "python3.11" }
+            "use": "@vercel/python"
         }
     ],
     "routes": [
